clusters/talos-ottawa/apps/media/app/sonarr-1080p/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-1080p
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr-1080p
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr-1080p
    spec:
      containers:
        - name: sonarr-1080p
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: tv-volume
              mountPath: /tv
            - name: downloads-sabnzbd-volume
              mountPath: /downloads/sabnzbd
            - name: downloads-qbittorrent-volume
              mountPath: /downloads/qbittorrent
            - name: config-volume
              mountPath: /config
      volumes:
        - name: tv-volume
          persistentVolumeClaim:
            claimName: sonarr-1080p-tv
        - name: downloads-sabnzbd-volume
          persistentVolumeClaim:
            claimName: sabnzbd-media
        - name: downloads-qbittorrent-volume
          persistentVolumeClaim:
            claimName: qbittorrent-media
        - name: config-volume
          persistentVolumeClaim:
            claimName: sonarr-1080p-config
