clusters/talos-ottawa/apps/media/app/sonarr-1080p/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-1080p
spec:
  selector:
    app: sonarr-1080p
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: 8989
  type: ClusterIP
